--- a/project/LaborGuru_SPM_API/trunk/api/pom.xml
+++ b/project/LaborGuru_SPM_API/trunk/api/pom.xml
@@ -121,7 +121,6 @@
           <artifactId>hibernate-core</artifactId>
           <version>${hibernate.version}</version>
       </dependency>
-
       <dependency>
           <groupId>javax.servlet</groupId>
           <artifactId>javax.servlet-api</artifactId>
@@ -134,7 +133,16 @@
           <version>2.3.1</version>
           <scope>provided</scope>
       </dependency>
-
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-web</artifactId>
+          <version>4.0.4.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-config</artifactId>
+          <version>4.0.4.RELEASE</version>
+      </dependency>
       <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-dbcp2</artifactId>
@@ -183,7 +191,6 @@
           <scope>test</scope>
       </dependency>
   </dependencies>
-
     <build>
         <finalName>spm</finalName>
         <resources>
