--- a/project/LaborGuru_SPM_API/trunk/api/src/main/webapp/WEB-INF/web.xml
+++ b/project/LaborGuru_SPM_API/trunk/api/src/main/webapp/WEB-INF/web.xml
@@ -37,11 +37,22 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
- 	 <servlet>
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/api/*</url-pattern>
+	</filter-mapping>
+
+	<servlet>
     	<servlet-name>mvc-dispatcher</servlet-name>
     	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
   		<load-on-startup>1</load-on-startup>
   	</servlet>
+
 
 	  <servlet-mapping>
 		<servlet-name>mvc-dispatcher</servlet-name>
